# athena-cycle

./: .gitignore  Makefile  README.md  athena-cycle.code-workspace  docker-compose.yml
.github/workflows/: syncer-checks.yml  syncer-release.yml  syncer.yml
crawler/: config.py  database.py  gh.py  jobs.py  logger.py  main.py  pyproject.toml
crawler/model/: pull_request.py
deployment/: kustomization.yml  postgresql.yml  syncer.yml
go-syncer/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
go-syncer/cmd/migrate/: main.go
go-syncer/cmd/syncer/: main.go
go-syncer/internal/config/: config.go
go-syncer/internal/github/: github.go  github_client.go  models.go  pg.go  sync.go  token_manager.go
go-syncer/internal/logging/: logger.go
go-syncer/internal/pg/: sync_status.go
go-syncer/migrations/: 000001_create_tables.down.sql  000001_create_tables.up.sql  000002_additions_deletions_pull_requests.down.sql  000002_additions_deletions_pull_requests.up.sql  000003_int_to_int8.down.sql  000003_int_to_int8.up.sql
python-syncer/: Makefile
python-syncer/syncer/: config.py  jira_jobs.py  logger.py
python-syncer/syncer/adapters/: database.py
syncer/: Dockerfile  Makefile  README.md  pyproject.toml
syncer/alembic/: env.py
syncer/alembic/versions/: 6f645089b860_add_stats_columns_to_pr.py  d48bcfaea4a8_add_last_convert_to_draft_event_column_.py
syncer/syncer/: config.py  database.py  gh.py  github_jobs.py  jira_jobs.py  jobs.py  logger.py  main.py  utils.py
syncer/syncer/adapters/: database.py  jira.py
syncer/syncer/model/: pull_request.py
(+5 files in other folders)
